@@ -17,14 +17,12 @@ set_full_path(THIS_DIR_HEADERS
   glob.hpp
   hydrogen_utils.hpp
   im2col.hpp
-  image.hpp
   jag_utils.hpp
   lbann_library.hpp
   mild_exception.hpp
   number_theory.hpp
   nvshmem.hpp
   omp_diagnostics.hpp
-  opencv.hpp
   options.hpp
   nvshmem.hpp
   profiling.hpp
@@ -40,6 +38,7 @@ set_full_path(THIS_DIR_HEADERS
   trainer_file_utils.hpp
   type_erased_matrix.hpp
   typename.hpp
+  vision.hpp
   visitor_hooks.hpp
   )
 
@@ -50,6 +49,11 @@ endif (LBANN_HAS_HALF)
 
 if (LBANN_HAS_DISTCONV)
   list(APPEND THIS_DIR_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/distconv.hpp")
+endif ()
+
+if (LBANN_HAS_OPENCV)
+  list(APPEND THIS_DIR_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/opencv.hpp")
+  list(APPEND THIS_DIR_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/image.hpp")
 endif ()
 
 # Add the subdirectories
