@@ -27,8 +27,10 @@
 #include "lbann/utils/summary.hpp"
 
 #include "lbann/utils/exception.hpp"
+#ifdef LBANN_HAS_OPENCV
 #include "lbann/utils/image.hpp"
-#include "lbann/utils/opencv.hpp"
+#endif // LBANN_HAS_OPENCV
+#include "lbann/utils/vision.hpp"
 
 namespace lbann {
 
@@ -51,6 +53,7 @@ lbann_summary::~lbann_summary() {
   }
 }
 
+#ifdef LBANN_HAS_OPENCV
 void lbann_summary::report_image(std::string const& tag,
                                  std::string const& img_format,
                                  CPUMat const& image,
@@ -70,6 +73,7 @@ void lbann_summary::report_image(std::string const& tag,
   m_sw->add_image(tag, img_str, dims, step);
 
 }
+#endif // LBANN_HAS_OPENCV
 
 void lbann_summary::flush() {
   flush_means();
